[package]
name = "yprenees"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitmap-font = "0.3.0"
embedded-graphics = "0.8.0"
gumdrop = "0.8.1"
gumdrop_derive = "0.8.1"
image = "0.24.6"
imageproc = "0.23.0"
rustc-hash = "1.1.0"
serde = "1.0.180"
serde_json = "1.0.104"

[profile.test]
opt-level = 3
